fix colored accordion border

--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -17,8 +17,9 @@
     }
 
     .accordion-item {
-      border-color: $value;
+      border-color: shift-color($value, 20);
     }
+
     .accordion-body {
       background-color: $value;
       color: color-contrast($value);
