--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,7 +7,9 @@
 @import "./buttons.scss";
 @import "./modal.scss";
 @import "./forms.scss";
+
 @import "./accordion.scss";
+@import "./alert.scss";
 
 body,
 html {
