--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="scss/styles.scss">
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
