--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -1,5 +1,8 @@
+$btn-padding-y-xs: $btn-padding-y-sm / 2;
+$btn-padding-x-xs: $btn-padding-x-sm / 2;
+
 .btn-xs {
-  @include button-size($btn-padding-y-sm / 2, $btn-padding-x-sm / 2, $btn-font-size-sm, $btn-border-radius-sm)
+  @include button-size($btn-padding-y-xs, $btn-padding-x-xs, $btn-font-size-sm, $btn-border-radius-sm)
 }
 
 .btn-outline-light {
