--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -57,4 +57,5 @@ $hr-border-color: $gray-300;
 $accordion-bg: $gray-100;
 $accordion-button-active-bg: $gray-200;
 
-// Alert
+// Breadcrumb
+// $breadcrumb-divider-color: $gray-200;
