--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <script type="module" src="js/main.js"></script>
   </head>
-  <body>
+  <body class='{{ bodyclass }}'>
     <block name="body"></block>
   </body>
 </html>
